tooling/nargo_cli/tests/snapshots/execution_success/fold_call_witness_condition/execute__tests__fold_call_witness_condition_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----
[fold_call_witness_condition] Circuit output: Vec([Field(0), Field(0)])
----- stderr -----
