tooling/nargo_cli/tests/snapshots/execution_success/fold_call_witness_condition/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
acir(inline) fn main f0 {
  b0(v0: Field, v1: Field, v2: u1):
    (no terminator instruction)
}
[fold_call_witness_condition] Circuit output: [0x00, 0x00]
